--- a/TODO
+++ b/TODO
@@ -168,8 +168,6 @@
 
 - circular primes ... just use repdigits after 1M?  https://oeis.org/A068652
 
-- finalize forfactors and forsquarefree.  Export, doc, test, PPFE, PP.
-
-- Make forfactored and forsquarefree efficient.
-
 - Figure out how to use multicall for forfactored and forsquarefree.
+
+- tests for forfactored and forsquarefree.
