--- a/TODO
+++ b/TODO
@@ -169,3 +169,7 @@
 - circular primes ... just use repdigits after 1M?  https://oeis.org/A068652
 
 - Figure out how to use multicall for forfactored and forsquarefree.
+
+- MR32 is allowing some composites?  2047 is passing.
+
+- Use factor_one in main factor loop
