--- a/Changes
+++ b/Changes
@@ -16,7 +16,7 @@ Revision history for Perl module Math::Prime::Util
     - is_primitive_root much faster (doesn't need to calulate totient,
       and faster rejection when n has no primitive root).
 
-    - znprimroot uses Montgomery, 1.2x to 1.3x faster.
+    - znprimroot and znorder use Montgomery, 1.2x to 2x faster.
 
     [OTHER]
 
