--- a/TODO
+++ b/TODO
@@ -180,3 +180,5 @@
   https://maths-people.anu.edu.au/~brent/pd/multiplication-HK.pdf
 
 - Adjust crossover in random_factored_integer PP code for Kalai vs. naive
+
+- Pari/GP 2.12 beta has rewritten (much faster) Bernoulli.  Check it out.
