--- a/TODO
+++ b/TODO
@@ -182,3 +182,7 @@
 - Adjust crossover in random_factored_integer PP code for Kalai vs. naive
 
 - Pari/GP 2.12 beta has rewritten (much faster) Bernoulli.  Check it out.
+
+- semiprime_count PP just walk if small range.
+
+- semiprime_count: docs, test
