--- a/Changes
+++ b/Changes
@@ -1,5 +1,12 @@
 Revision history for Perl module Math::Prime::Util
 
+0.72 2018-?
+
+    [FUNCTIONALITY AND PERFORMANCE]
+
+    - chebyshev_theta and chebyshev_psi redone and uses a table.
+      Large inputs are significantly faster.
+
 0.71 2018-08-28
 
     [ADDED]
