Add initial lucky number sieve

--- a/TODO
+++ b/TODO
@@ -203,3 +203,7 @@
 - split 80-PP into multiple tests: random, float, numeric, factor, prime, etc.
 
 - testing:  lehman_factor, print_primes, aks
+
+- lucky numbers / primes.  API?  Consider a for loop?
+
+- lucky:  PP, PPFE, doc, tests, lib/ntheory, use in examples
