Initial is_lucky and nth_lucky

--- a/TODO
+++ b/TODO
@@ -203,3 +203,5 @@
 - split 80-PP into multiple tests: random, float, numeric, factor, prime, etc.
 
 - testing:  lehman_factor, print_primes, aks
+
+- finish is_lucky, nth_lucky
