--- a/TODO
+++ b/TODO
@@ -211,3 +211,5 @@
 - random_safe_prime, p and (p-1)/2 are prime, see Wiener sieve
 
 - factor, factor_exp accept negative inputs
+
+- test for values < -2^63, returned correct.  e.g. powint(-544,7)
