--- a/TODO
+++ b/TODO
@@ -210,6 +210,10 @@
 
 - random_safe_prime, p and (p-1)/2 are prime, see Wiener sieve
 
-- factor, factor_exp accept negative inputs
+- factor, factor_exp should accept negative inputs
 
-- NEGMAXINT testing in PP
+- NEGMAXINT testing in PP.
+
+- NEGMAXINT input in XS.
+
+- euler_phi should do XS -> GMP directly.  Maybe make totient in PP for uniform name.
