--- a/Changes
+++ b/Changes
@@ -32,6 +32,8 @@ Revision history for Perl module Math::Prime::Util
 
     - AKS was modding a with r, since 2012.
 
+    - is_totient(2^k) with k >= 33, found by Trizen in 2019.
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.
