Fixed memory leak in forsquarefree + forfactored

--- a/Changes
+++ b/Changes
@@ -34,6 +34,8 @@ Revision history for Perl module Math::Prime::Util
 
     - is_totient(2^k) with k >= 33, found by Trizen in 2019.
 
+    - forsquarefree and forfactored were missing a destroy.  Thanks Trizen.
+
     [FUNCTIONALITY AND PERFORMANCE]
 
     - refactor objectification.  Doesn't force.  Enable on Perl < 5.9.
