--- a/TODO
+++ b/TODO
@@ -235,3 +235,7 @@
 - almost_prime_count(n, k).  Maybe other almost_prime functions?
 
 - primorial and pn_primorial to XS with direct to GMP.  Remember to objectify.
+
+- optimize PP is_almost_prime
+
+- ipowsafe could have the limits using hard-coded sqrt and cbrt to avoid div.
