--- a/Changes
+++ b/Changes
@@ -24,6 +24,7 @@ Revision history for Perl module Math::Prime::Util
     - random_safe_prime               for n-bit safe primes
     - is_smooth(n,k)                  is n a k-smooth number
     - is_rough(n,k)                   is n a k-rough number
+    - is_almost_prime(n,k)            does n have exactly k prime factors
 
     [FIXES]
 
