More almost_primes functionality, working in C, todo for Perl

--- a/Changes
+++ b/Changes
@@ -24,10 +24,15 @@ Revision history for Perl module Math::Prime::Util
     - random_safe_prime               for n-bit safe primes
     - is_smooth(n,k)                  is n a k-smooth number
     - is_rough(n,k)                   is n a k-rough number
-    - is_almost_prime(n,k)            does n have exactly k prime factors
-    - almost_prime_count(n,k)         Counts integers with exactly k factors
-    - almost_prime_count_approx(n,k)  Approximate count for k-almost-primes
-    - nth_almost_prime(n,k)           The nth number with exactly k factors
+    - is_almost_prime(k,n)            does n have exactly k prime factors
+    - almost_prime_count(k,n)         Counts integers with exactly k factors
+    - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
+    - almost_prime_count_lower(k,n)   fast k-almost-prime count lower bound
+    - almost_prime_count_upper(k,n)   fast k-almost-prime count upper bound
+    - nth_almost_prime(k,n)           The nth number with exactly k factors
+    - nth_almost_prime_approx(k,n)    fast approximate nth k-almost-prime
+    - nth_almost_prime_lower(k,n)     fast nth k-almost-prime lower bound
+    - nth_almost_prime_upper(k,n)     fast nth k-almost-prime upper bound
 
     [FIXES]
 
