--- a/TODO
+++ b/TODO
@@ -236,6 +236,8 @@
 
 - ipowsafe could have the limits using hard-coded sqrt and cbrt to avoid div.
 
+- almost_primes should look just like primes, but with a leading int k
+
 - almost_primes:
       range API
       range sieve
@@ -262,3 +264,32 @@
   nth https://oeis.org/A101695
 
 - Possibly improve semiprimes using the Bayless (2018) bounds.
+
+- XS almost_primes should just call a routine to get a UV list, possibly in
+  segments.  We can use almost_prime_count_approx to determine segment size.
+
+- TODO for almost primes:
+    count_upper for k=5+
+    count_lower for k=5+
+
+    max_almost_prime_count fill in k=5-13. Somehow.
+    max_almost_prime_count improve k=2,3,4.  Somehow.
+
+    for k=6+ we should use values from genk as well as searching backwards.
+
+    tests for all
+      apc, apca, apcl, apcu
+      nap, napa, napl, napu
+    PPFE for all
+      apcl, apcu
+      napa, napl, napu
+    PP for all
+      apca (adjust), apcl, apcu
+      nap (adjust), napa, napl, napu
+
+    Try sequence A052130.
+      a(n) = {my m = ceil(n*log(3)/log(1.5)); return apc(1<<m,m-n); }
+      Or: apc(m=floor(n*(1+1/sqrt(2))); return apc(2^(n+m+2), m+2)
+      mpu '$n=19; $m=int($n*log(3)/log(1.5)+1); say almost_prime_count(1<<$m, $m-$n);'
+      mpu '$n=19; $m=int($n*(1+1/sqrt(2))); say almost_prime_count(1<<($n+$m+2), $m+2);'
+      It looks like the Mathematica table has a misplaced paren.
