--- a/TODO
+++ b/TODO
@@ -280,3 +280,10 @@
 - various from Pari 2.11
 
 - GMP is_smooth, is_rough, is_powerful, various almost_primes
+
+- internal name rootof(n,k) should probably be rootint(n,k)
+
+- optimize nth_powerful, both in C and PP.
+
+- Add OEIS sequence, a(n) = the k-th k-powerful number
+  mpu 'for my $k (1..40) { say "$k ",nth_powerful($k,$k); }'
