--- a/TODO
+++ b/TODO
@@ -299,3 +299,8 @@
   https://link.springer.com/article/10.1007/s00200-018-0362-2
   https://www.researchgate.net/publication/325975350_On_the_Cipolla-Lehmer_type_algorithms_in_finite_fields
   https://stackoverflow.com/questions/6752374/cube-root-modulo-p-how-do-i-do-this
+  https://www.opt.math.tugraz.at/~cvdwoest/maths/dissertatie.pdf (Alg 2.1 + 3.3)
+  https://arxiv.org/pdf/1111.4877.pdf
+  http://bkms.kms.or.kr/journal/view.html?doi=10.4134/BKMS.b160769
+  https://github.com/sagemath/sagelib/blob/fd0c7c46e6a2da4b84df582e0da0333ce5cf79d9/sage/rings/finite_rings/element_base.pyx#L33
+  should we return 1 root or a list of all roots?
