--- a/Changes
+++ b/Changes
@@ -82,6 +82,9 @@ Revision history for Perl module Math::Prime::Util
     - Rewritten C version of Mertens based on pseudocode from Trizen.
       Over 100x faster at 2^32 and grows O(n^(2/3)) vs O(n).
 
+    - fromdigits for bigints uses subquadratic algorithm, thanks from Trizen.
+      It also will call GMP if possible.  The large example runs 100x faster.
+
 
 0.73 2018-11-15
 
