--- a/TODO
+++ b/TODO
@@ -337,3 +337,5 @@
   https://fishi.devtail.io/weblog/2015/06/25/computing-large-binomial-coefficients-modulo-prime-non-prime/
   https://pari.math.u-bordeaux.fr/archives/pari-users-0501/msg00001.html
   https://home.gwu.edu/~maxal/gpscripts/
+
+- Speed up XS RiemannR with quadmath.
