--- a/Changes
+++ b/Changes
@@ -42,6 +42,7 @@ Revision history for Perl module Math::Prime::Util
     - smooth_count(n,k)               count of k-smooth numbers <= n
     - rough_count(n,k)                count of k-rough numbers <= n
     - qnr(n)                          least quadratic non-residue
+    - binomialmod(n,k,m)              fast binomial(n,k) mod m
 
     [FIXES]
 
