--- a/TODO
+++ b/TODO
@@ -207,8 +207,12 @@
 
 - NEGMAXINT input in XS.
 
-- looks like lots of dodgy cases with -(2**63+1) and higher.  Our validate
-  is shortcutting negative range checks.  Why?
+- Looks like lots of dodgy cases with -(2**63+1) and higher.
+  Build in the svn conversion as well?  stat = get(&n, svn, flags);
+  We're now restricting negative inputs to -ivmax, which is better, but
+  means we're skipping optimizations for where we want abs(n) or -n.  If
+  we built this into the flags, it would be slightly messy but now in
+  exactly one place instead of all over.
 
 - euler_phi should do XS -> GMP directly.  Maybe make totient in PP for uniform name.
 
